--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 #JINWOO'S REPO
+*.ttf
 *.asset
 *.meta
 *.md
@@ -88,3 +89,5 @@ crashlytics-build.properties
 /UserSettings
 
 /Assets/Settings
+/Assets/Resources/Fonts
+/Assets/TextMesh Pro
